--- a/assets/package.json
+++ b/assets/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^4.6.0",
     "mdbootstrap": "^4.20.0",
     "slick-animation": "^0.3.3"
